source/src/main/java/org/rss/tools/mpl/parsing/grammar/SmmlParser.java
// Generated from d:\dev\projetos\pml\src\main\java\org\rss\tools\smml\parsing\grammar\Smml.g4 by ANTLR 4.7

package org.rss.tools.mpl.parsing.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SmmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, IDENTIFIER=15, ABSP=16, 
		HEADER_DELIMITER=17, DASH=18, TEXT_SYMBOL=19, CURRENCY=20, TAB=21, ALPHABET=22, 
		QUOTE=23, TS=24, LINE=25, COMMENT=26;
	public static final int
		RULE_document = 0, RULE_header = 1, RULE_headerBody = 2, RULE_templateLine = 3, 
		RULE_statesLine = 4, RULE_stylesLine = 5, RULE_style = 6, RULE_body = 7, 
		RULE_bodyLine = 8, RULE_component = 9, RULE_lineHeader = 10, RULE_checkbox = 11, 
		RULE_button = 12, RULE_email = 13, RULE_inputText = 14, RULE_combobox = 15, 
		RULE_radio = 16, RULE_table = 17, RULE_list = 18, RULE_listItem = 19, 
		RULE_lineText = 20, RULE_fileName = 21;
	public static final String[] ruleNames = {
		"document", "header", "headerBody", "templateLine", "statesLine", "stylesLine", 
		"style", "body", "bodyLine", "component", "lineHeader", "checkbox", "button", 
		"email", "inputText", "combobox", "radio", "table", "list", "listItem", 
		"lineText", "fileName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'template:'", "'states:'", "'['", "','", "']'", "'styles:'", "'[x]'", 
		"'\"@\"'", "'\"'", "'^'", "'('", "'x'", "')'", "'|'", null, null, null, 
		"'-'", null, "'$'", "'\t'", null, "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "IDENTIFIER", "ABSP", "HEADER_DELIMITER", "DASH", "TEXT_SYMBOL", 
		"CURRENCY", "TAB", "ALPHABET", "QUOTE", "TS", "LINE", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Smml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SmmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<TerminalNode> LINE() { return getTokens(SmmlParser.LINE); }
		public TerminalNode LINE(int i) {
			return getToken(SmmlParser.LINE, i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			header();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINE) {
				{
				{
				setState(45);
				match(LINE);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public List<TerminalNode> HEADER_DELIMITER() { return getTokens(SmmlParser.HEADER_DELIMITER); }
		public TerminalNode HEADER_DELIMITER(int i) {
			return getToken(SmmlParser.HEADER_DELIMITER, i);
		}
		public HeaderBodyContext headerBody() {
			return getRuleContext(HeaderBodyContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(HEADER_DELIMITER);
			setState(54);
			headerBody();
			setState(55);
			match(HEADER_DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderBodyContext extends ParserRuleContext {
		public TemplateLineContext templateLine() {
			return getRuleContext(TemplateLineContext.class,0);
		}
		public StatesLineContext statesLine() {
			return getRuleContext(StatesLineContext.class,0);
		}
		public StylesLineContext stylesLine() {
			return getRuleContext(StylesLineContext.class,0);
		}
		public HeaderBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterHeaderBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitHeaderBody(this);
		}
	}

	public final HeaderBodyContext headerBody() throws RecognitionException {
		HeaderBodyContext _localctx = new HeaderBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_headerBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(57);
				templateLine();
				}
			}

			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(60);
				statesLine();
				}
			}

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(63);
				stylesLine();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateLineContext extends ParserRuleContext {
		public List<TerminalNode> QUOTE() { return getTokens(SmmlParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(SmmlParser.QUOTE, i);
		}
		public FileNameContext fileName() {
			return getRuleContext(FileNameContext.class,0);
		}
		public TerminalNode LINE() { return getToken(SmmlParser.LINE, 0); }
		public TerminalNode TS() { return getToken(SmmlParser.TS, 0); }
		public TemplateLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterTemplateLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitTemplateLine(this);
		}
	}

	public final TemplateLineContext templateLine() throws RecognitionException {
		TemplateLineContext _localctx = new TemplateLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_templateLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__0);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(67);
				match(TS);
				}
			}

			setState(70);
			match(QUOTE);
			setState(71);
			fileName();
			setState(72);
			match(QUOTE);
			setState(73);
			match(LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesLineContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SmmlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SmmlParser.IDENTIFIER, i);
		}
		public TerminalNode LINE() { return getToken(SmmlParser.LINE, 0); }
		public List<TerminalNode> TS() { return getTokens(SmmlParser.TS); }
		public TerminalNode TS(int i) {
			return getToken(SmmlParser.TS, i);
		}
		public StatesLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statesLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterStatesLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitStatesLine(this);
		}
	}

	public final StatesLineContext statesLine() throws RecognitionException {
		StatesLineContext _localctx = new StatesLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statesLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__1);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(76);
				match(TS);
				}
			}

			setState(79);
			match(T__2);
			setState(80);
			match(IDENTIFIER);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(81);
				match(T__3);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TS) {
					{
					setState(82);
					match(TS);
					}
				}

				setState(85);
				match(IDENTIFIER);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(T__4);
			setState(92);
			match(LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StylesLineContext extends ParserRuleContext {
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public TerminalNode LINE() { return getToken(SmmlParser.LINE, 0); }
		public TerminalNode TS() { return getToken(SmmlParser.TS, 0); }
		public StylesLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterStylesLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitStylesLine(this);
		}
	}

	public final StylesLineContext stylesLine() throws RecognitionException {
		StylesLineContext _localctx = new StylesLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stylesLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__5);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(95);
				match(TS);
				}
			}

			setState(98);
			match(T__2);
			setState(99);
			style();
			setState(100);
			match(T__4);
			setState(101);
			match(LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StyleContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SmmlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SmmlParser.IDENTIFIER, i);
		}
		public List<FileNameContext> fileName() {
			return getRuleContexts(FileNameContext.class);
		}
		public FileNameContext fileName(int i) {
			return getRuleContext(FileNameContext.class,i);
		}
		public List<TerminalNode> TS() { return getTokens(SmmlParser.TS); }
		public TerminalNode TS(int i) {
			return getToken(SmmlParser.TS, i);
		}
		public StyleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_style; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterStyle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitStyle(this);
		}
	}

	public final StyleContext style() throws RecognitionException {
		StyleContext _localctx = new StyleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_style);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(103);
				match(IDENTIFIER);
				}
				break;
			case 2:
				{
				setState(104);
				fileName();
				}
				break;
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(107);
				match(T__3);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TS) {
					{
					setState(108);
					match(TS);
					}
				}

				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(111);
					match(IDENTIFIER);
					}
					break;
				case 2:
					{
					setState(112);
					fileName();
					}
					break;
				}
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<BodyLineContext> bodyLine() {
			return getRuleContexts(BodyLineContext.class);
		}
		public BodyLineContext bodyLine(int i) {
			return getRuleContext(BodyLineContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				bodyLine();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13) | (1L << IDENTIFIER) | (1L << ABSP) | (1L << DASH) | (1L << TEXT_SYMBOL) | (1L << CURRENCY) | (1L << TAB))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyLineContext extends ParserRuleContext {
		public TerminalNode LINE() { return getToken(SmmlParser.LINE, 0); }
		public List<TerminalNode> TAB() { return getTokens(SmmlParser.TAB); }
		public TerminalNode TAB(int i) {
			return getToken(SmmlParser.TAB, i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public BodyLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterBodyLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitBodyLine(this);
		}
	}

	public final BodyLineContext bodyLine() throws RecognitionException {
		BodyLineContext _localctx = new BodyLineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bodyLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(125);
				match(TAB);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				component();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13) | (1L << IDENTIFIER) | (1L << ABSP) | (1L << DASH) | (1L << TEXT_SYMBOL) | (1L << CURRENCY))) != 0) );
			setState(136);
			match(LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentContext extends ParserRuleContext {
		public LineHeaderContext lineHeader() {
			return getRuleContext(LineHeaderContext.class,0);
		}
		public ButtonContext button() {
			return getRuleContext(ButtonContext.class,0);
		}
		public InputTextContext inputText() {
			return getRuleContext(InputTextContext.class,0);
		}
		public EmailContext email() {
			return getRuleContext(EmailContext.class,0);
		}
		public CheckboxContext checkbox() {
			return getRuleContext(CheckboxContext.class,0);
		}
		public RadioContext radio() {
			return getRuleContext(RadioContext.class,0);
		}
		public ComboboxContext combobox() {
			return getRuleContext(ComboboxContext.class,0);
		}
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public LineTextContext lineText() {
			return getRuleContext(LineTextContext.class,0);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitComponent(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_component);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CURRENCY:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				lineHeader();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				button();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				inputText();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				email();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				checkbox();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				radio();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 7);
				{
				setState(144);
				combobox();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 8);
				{
				setState(145);
				table();
				}
				break;
			case DASH:
				enterOuterAlt(_localctx, 9);
				{
				setState(146);
				list();
				}
				break;
			case IDENTIFIER:
			case ABSP:
			case TEXT_SYMBOL:
				enterOuterAlt(_localctx, 10);
				{
				setState(147);
				lineText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineHeaderContext extends ParserRuleContext {
		public TerminalNode ABSP() { return getToken(SmmlParser.ABSP, 0); }
		public List<TerminalNode> CURRENCY() { return getTokens(SmmlParser.CURRENCY); }
		public TerminalNode CURRENCY(int i) {
			return getToken(SmmlParser.CURRENCY, i);
		}
		public LineHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterLineHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitLineHeader(this);
		}
	}

	public final LineHeaderContext lineHeader() throws RecognitionException {
		LineHeaderContext _localctx = new LineHeaderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_lineHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(150);
				match(CURRENCY);
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CURRENCY );
			setState(155);
			match(ABSP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CheckboxContext extends ParserRuleContext {
		public TerminalNode TS() { return getToken(SmmlParser.TS, 0); }
		public CheckboxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checkbox; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterCheckbox(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitCheckbox(this);
		}
	}

	public final CheckboxContext checkbox() throws RecognitionException {
		CheckboxContext _localctx = new CheckboxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_checkbox);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__6);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(158);
				match(TS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ButtonContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SmmlParser.IDENTIFIER, 0); }
		public TerminalNode ABSP() { return getToken(SmmlParser.ABSP, 0); }
		public List<TerminalNode> TS() { return getTokens(SmmlParser.TS); }
		public TerminalNode TS(int i) {
			return getToken(SmmlParser.TS, i);
		}
		public ButtonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_button; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterButton(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitButton(this);
		}
	}

	public final ButtonContext button() throws RecognitionException {
		ButtonContext _localctx = new ButtonContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_button);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__2);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(162);
				match(TS);
				}
			}

			setState(165);
			_la = _input.LA(1);
			if ( !(_la==IDENTIFIER || _la==ABSP) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(166);
				match(TS);
				}
			}

			setState(169);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmailContext extends ParserRuleContext {
		public EmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_email; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterEmail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitEmail(this);
		}
	}

	public final EmailContext email() throws RecognitionException {
		EmailContext _localctx = new EmailContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_email);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputTextContext extends ParserRuleContext {
		public List<TerminalNode> TS() { return getTokens(SmmlParser.TS); }
		public TerminalNode TS(int i) {
			return getToken(SmmlParser.TS, i);
		}
		public InputTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).enterInputText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmmlListener ) ((SmmlListener)listener).exitInputText(this);
		}
	}

	public final InputTextContext inputText() throws RecognitionException {
		InputTextContext _localctx = new InputTextContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_inputText);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(173);
			match(T__8);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TS) {
				{
				{
				setState(174);
				match(TS);
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(T__8);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComboboxContext extends ParserRuleContext {
